--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -241,9 +241,9 @@
                     <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
                       <li class="nav-item"><a class="nav-link" href="/members">Members</a></li>
                     <li class="nav-item"><a class="nav-link" href="/expenses">Expenses</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Collections</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/collections">Collections</a></li>
                     <li class="nav-item"><a class="nav-link" href="/meals">Meals</a></li>
-                    <li class="nav-item"><a th:href="@{/reports/monthly-summary}" class="nav-link">Reports</a></li>
+                    <li class="nav-item"><a class="nav-link" href="reports/monthly-balance">Reports</a></li>
                     <li class="nav-item d-flex"><a class="nav-link" href="/login" th:if="${!isLoggedIn}">Login</a></li>
                     <li class="nav-item d-flex"><a class="nav-link" href="/logout" th:if="${isLoggedIn}">Logout</a></li>
                 </ul>
