--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -243,7 +243,7 @@
                     <li class="nav-item"><a class="nav-link" href="/expenses">Expenses</a></li>
                     <li class="nav-item"><a class="nav-link" href="/collections">Collections</a></li>
                     <li class="nav-item"><a class="nav-link" href="/meals">Meals</a></li>
-                    <li class="nav-item"><a class="nav-link" href="reports/member">Reports</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/reports">Reports</a></li>
                     <li class="nav-item d-flex"><a class="nav-link" href="/login" th:if="${!isLoggedIn}">Login</a></li>
                     <li class="nav-item d-flex"><a class="nav-link" href="/logout" th:if="${isLoggedIn}">Logout</a></li>
                 </ul>
