--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -234,16 +234,16 @@
 <div th:fragment="navbar">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand">Mess Management System</a>
+            <a class="navbar-brand" href="/">Mess Management System</a>
 
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
-                      <li class="nav-item"><a class="nav-link" href="/members">Members</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/expenses">Expenses</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/collections">Collections</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/meals">Meals</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/reports">Reports</a></li>
+<!--                    <li class="nav-item"><a class="nav-link" href="/">Home</a></li>-->
+<!--                    <li class="nav-item"><a class="nav-link" href="/members">Members</a></li>-->
+<!--                    <li class="nav-item"><a class="nav-link" href="/expenses">Expenses</a></li>-->
+<!--                    <li class="nav-item"><a class="nav-link" href="/collections">Collections</a></li>-->
+<!--                    <li class="nav-item"><a class="nav-link" href="/meals">Meals</a></li>-->
+<!--                    <li class="nav-item"><a class="nav-link" href="/reports">Reports</a></li>-->
                     <li class="nav-item d-flex"><a class="nav-link" href="/login" th:if="${!isLoggedIn}">Login</a></li>
                     <li class="nav-item d-flex"><a class="nav-link" href="/logout" th:if="${isLoggedIn}">Logout</a></li>
                 </ul>
